--- a/index.html
+++ b/index.html
@@ -256,11 +256,10 @@
         <td>6504106355</td>
         <td>เทสๆ</td>
     </tr>
-    <tr>
-      <td>37</td>
-      <td>หนึ่งฤทัย เกตุแสง/td>
-      <td>6504106424</td>
-      <td>arai na</td>
+        <td>37</td>
+        <td>ธีรภัทร งามคณะ</td>
+        <td>6504106359</td>
+        <td>รู้มือนะ</td>
     </tr>
   </table>
 </body>
