--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
     </tr>
       <tr>
       <td>33</td>
-      <td>ศิริชัย วัชราไชยกุล</td>
+      <td>ศิริชัย วัชราไชยกุล/td>
       <td>6504106410</td>
-      <td>เจ้ตีกูไม งง</td>
+      <td>ห๊าาาาา</td>
     </tr>
     <tr>
       <td>34</td>
@@ -262,11 +262,11 @@
       <td>6504106424</td>
       <td>arai na</td>
     </tr>
-       <tr>
-      <td>38</td>
-        <td>วีรภัทร จีนกิจมั่น</td>
-        <td>6504106405</td>
-        <td>ดีจ้า</td>
+         <tr>
+      <td>39</td>
+      <td>ธีรภัทร  งามคณะ</td>
+      <td>6504106359</td>
+      <td>รู้มือนะ</td>
     </tr>
   </table>
 </body>
