--- a/index.html
+++ b/index.html
@@ -268,5 +268,12 @@
         <td>6504106405</td>
         <td>ดีจ้า</td>
     </tr>
+
+    <tr>
+      <td>39</td>
+      <td>ธีรภัทร งามคณะ</td>
+      <td>6504106359</td>
+      <td>รู้มือนะ</td>
+    </tr>
   </table>
 </body>
